--- a/.github/workflows/build-tailscale.yml
+++ b/.github/workflows/build-tailscale.yml
@@ -107,10 +107,30 @@ jobs:
       - name: Send Telegram notification
         if: steps.versions.outputs.build == 'true'
         run: |
-          MSG="New Tailscale release for macOS ARM! 🚀%0AVersion: ${{ steps.versions.outputs.version }}"
+          # 定义变量
+          VERSION="${{ steps.versions.outputs.version }}"
+          REPO="${{ github.repository }}"
+          # 构建下载链接 (GitHub Releases 的标准固定链接格式)
+          DOWNLOAD_URL="https://github.com/$REPO/releases/download/$VERSION/tailscale"
+          DAEMON_URL="https://github.com/$REPO/releases/download/$VERSION/tailscaled"
+          # 官方 Changelog 链接
+          UPSTREAM_URL="https://github.com/tailscale/tailscale/releases/tag/$VERSION"
+          
+          # 构建 HTML 消息 (注意转义引号)
+          # <b>粗体</b>, <code>代码样式</code>, <a href="...">链接</a>
+          MESSAGE="<b>Tailscale (macOS ARM) 构建成功!</b> 🍏%0A%0A"
+          MESSAGE+="📦 <b>版本:</b> <code>$VERSION</code>%0A"
+          MESSAGE+="⚙️ <b>架构:</b> ARM64%0A%0A"
+          MESSAGE+="⬇️ <a href=\"$DOWNLOAD_URL\">下载客户端 (tailscale)</a>%0A"
+          MESSAGE+="⬇️ <a href=\"$DAEMON_URL\">下载守护进程 (tailscaled)</a>%0A%0A"
+          MESSAGE+="📝 <a href=\"$UPSTREAM_URL\">查看官方更新日志</a>"
+
+          # 发送请求，注意增加了 -d parse_mode=HTML
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="$MSG"
+            -d parse_mode=HTML \
+            -d disable_web_page_preview=true \
+            -d text="$MESSAGE"
 
   cleanup-runs:
     runs-on: ubuntu-latest
